# Sakamoto

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  flake.nix
.github/workflows/: ci.yml
.sakamoto/rules/: general.md
.sakamoto/rules/backend/: rust.md
crates/sakamoto-cli/: Cargo.toml  README.md
crates/sakamoto-cli/src/: main.rs
crates/sakamoto-cli/src/commands/: check.rs  init.rs  mod.rs  run.rs
crates/sakamoto-config/: Cargo.toml  README.md
crates/sakamoto-config/src/: lib.rs  types.rs
crates/sakamoto-context/: Cargo.toml  README.md
crates/sakamoto-context/src/: engine.rs  fetcher.rs  lib.rs  parser.rs
crates/sakamoto-core/: Cargo.toml  README.md
crates/sakamoto-core/src/: dag.rs  lib.rs  react.rs  runner.rs  stage.rs
crates/sakamoto-executor/: Cargo.toml  README.md
crates/sakamoto-executor/src/: adapters.rs  executor.rs  lib.rs  local.rs  rules.rs
crates/sakamoto-executor/src/stages/: code.rs  command.rs  context.rs  mod.rs
crates/sakamoto-gui/: Cargo.toml
crates/sakamoto-gui/src/: lib.rs
crates/sakamoto-llm/: Cargo.toml  README.md
crates/sakamoto-llm/src/: backend.rs  lib.rs
crates/sakamoto-llm/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
crates/sakamoto-tools/: Cargo.toml  README.md
crates/sakamoto-tools/src/: lib.rs  router.rs  tool.rs
crates/sakamoto-tools/src/builtin/: fs_read.rs  fs_write.rs  mod.rs  shell.rs
crates/sakamoto-tools/src/mcp/: connection.rs  mod.rs  tool.rs  transport.rs
crates/sakamoto-types/: Cargo.toml  README.md
crates/sakamoto-types/src/: context.rs  error.rs  lib.rs  llm.rs  pipeline.rs  stage.rs
hooks/: install.sh  pre-commit
