[package]
name = "sakamoto-context"
description = "Context parsing, fetching, and pre-hydration for Sakamoto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sakamoto-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2"

[dev-dependencies]
tempfile = "3"
