[package]
name = "sakamoto-executor"
description = "Pluggable execution environments for Sakamoto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sakamoto-types = { workspace = true }
sakamoto-core = { workspace = true }
sakamoto-llm = { workspace = true }
sakamoto-tools = { workspace = true }
sakamoto-context = { workspace = true }
sakamoto-config = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
