[package]
name = "sakamoto-types"
description = "Core types, phantom states, and algebraic patterns for Sakamoto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
